--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -326,7 +326,7 @@
 </div>
 
 <div class="content" role="main">
-
+  <h1>{{'GENERAL.WELCOME'|translate}}</h1>
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
