--- a/src/app/components/modals/confirmation/confirmation.component.html
+++ b/src/app/components/modals/confirmation/confirmation.component.html
@@ -1,8 +1,8 @@
-<h2 mat-dialog-title>Confirm Delete</h2>
+<h2 mat-dialog-title>{{'PRODUCT.CONFIRM_DELETE' | translate}}</h2>
 <div mat-dialog-content>
-  Are you sure you want to delete this product?
+    {{'PRODUCT.DELETE_MESSAGE' | translate}}
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button [mat-dialog-close]="true" >Yes</button>
+  <button mat-button mat-dialog-close>{{'PRODUCT.NO' | translate}}</button>
+  <button mat-button [mat-dialog-close]="true" >{{'PRODUCT.YES' | translate}}</button>
 </div>
