--- a/src/app/components/product/product-card/product-card.component.scss
+++ b/src/app/components/product/product-card/product-card.component.scss
@@ -1,9 +1,10 @@
 .card {
-    width: 18rem;
+   // width: 18rem;
     margin-bottom: 20px;
   }
   
   .card-img-top {
+    padding: 5px;
     height: 200px;
     object-fit: cover;
   }
@@ -19,6 +20,6 @@
   }
   
   .star-icon {
-    color: #ffc107; /* yellow color for the stars */
+    color: #ffc107; 
     font-size: 1.2rem;
   }
