--- a/src/app/features/dashboard/pages/product-form/product-form.component.html
+++ b/src/app/features/dashboard/pages/product-form/product-form.component.html
@@ -1,44 +1,43 @@
 <div class="container">
     <div class="row mt-4">
         <div class="col-md-10 col-lg-10 col-sm-12">
-            <h2>{{ isEdit ? 'Edit Product' : 'Create New Product' }}</h2>
+            <h2>{{ (isEdit ? 'PRODUCT.EDIT_PRODUCT' : 'PRODUCT.CREATE_NEW_PRODUCT') | translate }}</h2>
             <form [formGroup]="productForm" (ngSubmit)="onSubmit()" novalidate class="d-flex flex-column">
                 <mat-form-field appearance="fill">
-                    <mat-label>Title</mat-label>
+                    <mat-label>{{'PRODUCT.TITLE'|translate}}</mat-label>
                     <input matInput formControlName="title" required>
-                    <mat-error *ngIf="productForm?.get('title')?.invalid">Title is required.</mat-error>
+                    <mat-error *ngIf="productForm?.get('title')?.invalid">{{'PRODUCT.TITLE_REQUIRED'|translate}}</mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="fill">
-                    <mat-label>Price</mat-label>
+                    <mat-label>{{'PRODUCT.PRICE'|translate}}</mat-label>
                     <input matInput type="number" formControlName="price" required>
-                    <mat-error *ngIf="productForm?.get('price')?.invalid">Price is required and should be a valid
-                        number.</mat-error>
+                    <mat-error *ngIf="productForm?.get('price')?.invalid"> {{'PRODUCT.PRICE_IS_REQUIRED'|translate}} </mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="fill">
-                    <mat-label>Category</mat-label>
+                    <mat-label>{{'PRODUCT.CATEGORY'|translate}}</mat-label>
                     <mat-select formControlName="category" required>
                         <mat-option *ngFor="let category of categories" [value]="category">{{ category }}</mat-option>
                     </mat-select>
-                    <mat-error *ngIf="productForm?.get('category')?.invalid">Category is required.</mat-error>
+                    <mat-error *ngIf="productForm?.get('category')?.invalid">{{'PRODUCT.CATEGORY_REQUIRED'|translate}}</mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="fill">
-                    <mat-label>Description</mat-label>
+                    <mat-label>{{'PRODUCT.DESCRIPTION'|translate}}</mat-label>
                     <textarea matInput formControlName="description" required></textarea>
-                    <mat-error *ngIf="productForm?.get('description')?.invalid">Description is required.</mat-error>
+                    <mat-error *ngIf="productForm?.get('description')?.invalid">{{'PRODUCT.DESCRIPTION_REQUIRED'|translate}}</mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="fill">
-                    <mat-label>Image URL</mat-label>
+                    <mat-label>{{'PRODUCT.IMAGE'|translate}}</mat-label>
                     <input matInput formControlName="image">
                 </mat-form-field>
-            <div class="error-message" *ngIf="showErrorMessage"> {{isEdit ?  'Failed to update the product. Please try again.' :  'Failed to create  product. Please try again.' }}</div>
+            <div class="error-message" *ngIf="showErrorMessage"> {{(isEdit ?  'PRODUCT.FAILED_TO_UPDATE' :  'PRODUCT.FAILED_TO_CREATE') | translate }}</div>
 
                 <div class="d-flex ">
-                    <button  *ngIf="!loading" mat-raised-button color="primary" type="submit"> Save </button>
-                    <mat-spinner *ngIf="!!loading" diameter="30" Title></mat-spinner> 
+                    <button  *ngIf="!loading" mat-raised-button color="primary" type="submit">{{'PRODUCT.SAVE'|translate}}</button>
+                    <mat-spinner *ngIf="!!loading" diameter="30"></mat-spinner> 
                 </div>
                 
             </form>
