--- a/src/app/features/dashboard/pages/product-list/product-list.component.html
+++ b/src/app/features/dashboard/pages/product-list/product-list.component.html
@@ -1,40 +1,37 @@
 <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="my-4">Product List</h2>
+      <div class="col-md-12 col-12">
+        <h2 class="my-4">{{'PRODUCT.PRODUCT_LIST' |translate}}</h2>
         <div class="d-flex justify-content-end my-4">
-          <button mat-raised-button color="primary" routerLink="/dashboard/new-product">Create New Product</button>
+          <button mat-raised-button color="primary" routerLink="/dashboard/new-product">{{'PRODUCT.CREATE_PRODUCT' | translate}}</button>
         </div>
   
-        <table mat-table [dataSource]="products">
-          <!-- Name Column -->
+        <table mat-table [dataSource]="products" matSort (matSortChange)="announceSortChange($event)"
+        class="mat-elevation-z8" >
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header >{{'PRODUCT.TITLE' |translate}}</th>
             <td mat-cell *matCellDef="let product">{{ product.title }}</td>
           </ng-container>
   
-          <!-- Category Column -->
           <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef>Category</th>
+            <th mat-header-cell *matHeaderCellDef>{{'PRODUCT.CATEGORY' |translate}}</th>
             <td mat-cell *matCellDef="let product">{{ product.category }}</td>
           </ng-container>
   
-          <!-- Price Column -->
           <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef>Price</th>
+            <th mat-header-cell *matHeaderCellDef>{{'PRODUCT.PRICE' |translate}}</th>
             <td mat-cell *matCellDef="let product">{{ product.price }} $</td>
           </ng-container>
   
-          <!-- Actions Column -->
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <th mat-header-cell *matHeaderCellDef>{{'PRODUCT.ACTION' |translate}}</th>
             <td mat-cell *matCellDef="let product">
             
               <button routerLink="/dashboard/edit-product/{{ product.id }}" mat-icon-button color="primary"
-              matTooltip="{{ 'GENERAL.EDIT' | translate }}">
+              matTooltip="{{ 'PRODUCT.EDIT' | translate }}">
               <mat-icon>create</mat-icon>
           </button>&nbsp;
-          <button mat-icon-button color="warn" matTooltip="{{ 'GENERAL.DELETE' | translate }}" type="button"
+          <button mat-icon-button color="warn" matTooltip="{{ 'PRODUCT.DELETE' | translate }}" type="button"
               (click)="deleteProduct(product.id)">
               <mat-icon>delete</mat-icon>
           </button>
