--- a/src/app/features/products/products/products.component.html
+++ b/src/app/features/products/products/products.component.html
@@ -2,7 +2,7 @@
 
   <div class="container mt-4">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 mb-2">
         <app-filter></app-filter>
       </div>
       <div class="col-md-9">
