--- a/src/app/components/product/filter/filter.component.html
+++ b/src/app/components/product/filter/filter.component.html
@@ -1,5 +1,9 @@
 <mat-card>
-    <mat-card-title>{{'PRODUCT.CATEGORIES'|translate}}</mat-card-title>
+    <mat-card-title>
+      <span class="py-2">
+        {{'PRODUCT.CATEGORIES'|translate}}
+      </span>
+      </mat-card-title>
     <mat-nav-list>
       <a mat-list-item [routerLink]="['/products']">{{'PRODUCT.ALL'|translate}}</a>
       <a mat-list-item *ngFor="let category of categories$ |async " [routerLink]="['/products', { category: category }]">
