add unsubscribe to product list

--- a/src/app/features/dashboard/pages/product-list/product-list.component.html
+++ b/src/app/features/dashboard/pages/product-list/product-list.component.html
@@ -32,7 +32,7 @@
               <mat-icon>create</mat-icon>
           </button>&nbsp;
           <button mat-icon-button color="warn" matTooltip="{{ 'PRODUCT.DELETE' | translate }}" type="button"
-              (click)="deleteProduct(product.id)">
+              (click)="openDeleteProductDialog(product.id)">
               <mat-icon>delete</mat-icon>
           </button>
          
