--- a/src/app/features/dashboard/pages/product-form/product-form.component.html
+++ b/src/app/features/dashboard/pages/product-form/product-form.component.html
@@ -33,11 +33,11 @@
                     <mat-label>{{'PRODUCT.IMAGE'|translate}}</mat-label>
                     <input matInput formControlName="image">
                 </mat-form-field>
-            <div class="error-message" *ngIf="showErrorMessage"> {{(isEdit ?  'PRODUCT.FAILED_TO_UPDATE' :  'PRODUCT.FAILED_TO_CREATE') | translate }}</div>
+            <div class="error-message" *ngIf="hasErrorMessage"> {{(isEdit ?  'PRODUCT.FAILED_TO_UPDATE' :  'PRODUCT.FAILED_TO_CREATE') | translate }}</div>
 
                 <div class="d-flex ">
-                    <button  *ngIf="!loading" mat-raised-button color="primary" type="submit">{{'PRODUCT.SAVE'|translate}}</button>
-                    <mat-spinner *ngIf="!!loading" diameter="30"></mat-spinner> 
+                    <button  *ngIf="!isLoading" mat-raised-button color="primary" type="submit">{{'PRODUCT.SAVE'|translate}}</button>
+                    <mat-spinner *ngIf="isLoading" diameter="30"></mat-spinner> 
                 </div>
                 
             </form>
